# Coursework

./: CMakeLists.txt  main.cpp
TXTFilesExercise/: lowerBodyExercises.txt  upperBodyExercises.txt
core/exceptions/include/: InputValidator.h
core/models/include/user/: BodyMeasurement.h  Person.h
core/models/include/workout/: LowerBodyWorkout.h
core/models/src/user/: BodyMeasurement.cpp  User.cpp
core/models/src/workout/: CardioTraining.cpp  LowerBodyWorkout.cpp
core/repositories/include/: TextFile.h  TextFile.tpp
core/services/include/: WorkoutService.h
core/services/src/: BMICalculator.cpp  UserService.cpp  WorkoutService.cpp
core/utils/include/: Menu.h
core/utils/src/: Menu.cpp
exceptions/include/: Exception.h  FileException.h  InputException.h  InputValidator.h
exceptions/src/: InputValidator.cpp
gui/: DashboardWindow.cpp  DashboardWindow.h  HistoryChartWidget.cpp  HistoryChartWidget.h  LoginWindow.cpp  LoginWindow.h  RegistrationDialog.cpp  RegistrationDialog.h  gui_main.cpp
models/include/user/: BodyMeasurement.h  Person.h  User.h
models/include/workout/: CardioTraining.h  Exercise.h  LowerBodyWorkout.h  StrengthTraining.h  UpperBodyWorkout.h
models/src/user/: BodyMeasurement.cpp  Person.cpp  User.cpp
models/src/workout/: CardioTraining.cpp  Exercise.cpp  LowerBodyWorkout.cpp  StrengthTraining.cpp  UpperBodyWorkout.cpp
repositories/include/: File.h  TextFile.h  TextFile.tpp
services/include/: BMICalculator.h  UndoManager.h  UserService.h  WorkoutService.h
services/src/: BMICalculator.cpp  UndoManager.cpp  UserService.cpp  WorkoutService.cpp
src/: main.cpp
utils/include/: Menu.h  SearchSortEnums.h
utils/src/: Menu.cpp
